@@ -1,3 +1,10 @@
+2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>
+
+	* libdwfl.h: Fix spelling typos in comments.
+	* dwfl_module_getdwarf.c (open_elf, find_symtab): Likewise.
+	* dwfl_report_elf.c (__libdwfl_elf_address_range): Likewise.
+	* linux-pid-attach.c (read_cached_memory): Likewise.
+
 2020-12-07  Timm Bäder  <tbaeder@redhat.com>
 
 	* link_map.c (report_r_debug): Pull read_addrs() function into
@@ -816,7 +823,7 @@
 	* link_map.c (check32): Use read_4ubyte_unaligned_noncvt to read
 	type and value.
 	(read_addrs): Use read_(4|8)ubyte_unaligned_noncvt or to read
-	adresses.
+	addresses.
 
 2015-05-30  Mark Wielaard  <mjw@redhat.com>
 
@@ -1738,7 +1745,7 @@
 
 2013-01-23  Mark Wielaard  <mjw@redhat.com>
 
-	* dwfl_module_getdwarf.c (find_aux_sym): Don't substract one
+	* dwfl_module_getdwarf.c (find_aux_sym): Don't subtract one
 	from aux_syments by default.
 	(find_symtab): Also succeed when only aux_symdata is found.
 	When no symtab is found always try to load auxiliary table.
@@ -1746,7 +1753,7 @@
 	tables have symbols.
 	* dwfl_module_getsym.c (dwfl_module_getsym): Only skip auxiliary
 	zero entry when both tables have symbols.
-	* dwfl_module_addrsym.c (dwfl_module_addrsym): Only substract
+	* dwfl_module_addrsym.c (dwfl_module_addrsym): Only subtract
 	one from first_global when both tables have symbols.
 
 2013-01-16  Mark Wielaard  <mjw@redhat.com>
